# nexus-banking-platform

./: .gitignore  LICENSE  README.md  Taskfile.install.yml
banking_api/: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
banking_api/migrations/: 20250602195421_create_banking_base_entities.down.sql
banking_api/src/: main.py
banking_api/src/cmd/: run_api.sh
banking_api/src/internal/configs/: app.py  postgresql.py
banking_api/src/internal/database/: postgresql.py
banking_api/src/internal/dependencies/: account.py  customer.py  transfer.py
banking_api/src/internal/handlers/: account.py  customer.py  health.py  transfer.py
banking_api/src/internal/helpers/: app.py  app_exceptions.py  utils.py
banking_api/src/internal/models/: account.py  customer.py  db_base.py  transfer.py
banking_api/src/internal/repos/: account.py  customer.py  transfer.py
banking_api/src/internal/service/: account.py  customer.py  transfer.py
banking_api/src/tests/: conftest.py
banking_api/src/tests/handlers/: test_account.py  test_transfer.py
migrations/: 20250402195421_create_banking_base_entities.up.sql
