[tool.poetry]
name = "banking_api"
version = "0.1.0"
description = ""
authors = [
    "Manoja Hirannaiah Anitha <manojasai2@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python="^3.12"
fastapi = "0.115.12"
pg8000 = "1.30.1"
pydantic = "2.11.1"
pydantic-settings = "2.8.1"
requests = "2.31.0"
sqlalchemy = "2.0.40"
uvicorn = "0.34.0"
sqlmodel = "0.0.24"
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
mypy = "1.15.0"
pytest = "8.3.5"
requests-mock = "1.12.1"
ruff = "0.11.2"
types-requests = "2.32.0.20250328"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]